; ModuleID = '/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_kxgettext.c_mesage__find.c'
source_filename = "/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_kxgettext.c_mesage__find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.message = type { %struct.message*, i32 }

@message__list = common dso_local global %struct.message* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.message* (i8*)* @mesage__find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.message* @mesage__find(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.message*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load %struct.message*, %struct.message** @message__list, align 8
  store %struct.message* %4, %struct.message** %3, align 8
  br label %5

5:                                                ; preds = %16, %1
  %6 = load %struct.message*, %struct.message** %3, align 8
  %7 = icmp ne %struct.message* %6, null
  br i1 %7, label %8, label %20

8:                                                ; preds = %5
  %9 = load %struct.message*, %struct.message** %3, align 8
  %10 = getelementptr inbounds %struct.message, %struct.message* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = load i8*, i8** %2, align 8
  %13 = call i64 @strcmp(i32 %11, i8* %12)
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %8
  br label %20

16:                                               ; preds = %8
  %17 = load %struct.message*, %struct.message** %3, align 8
  %18 = getelementptr inbounds %struct.message, %struct.message* %17, i32 0, i32 0
  %19 = load %struct.message*, %struct.message** %18, align 8
  store %struct.message* %19, %struct.message** %3, align 8
  br label %5

20:                                               ; preds = %15, %5
  %21 = load %struct.message*, %struct.message** %3, align 8
  ret %struct.message* %21
}

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
